[gd_scene load_steps=7 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://directionsscreen.gd" type="Script" id=2]
[ext_resource path="res://icons/directions.png" type="Texture" id=3]
[ext_resource path="res://SourceSansPro-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://itemlistscroll.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 40
custom_constants/margin_left = 30
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="C/M"]
margin_left = 30.0
margin_top = 40.0
margin_right = 700.0
margin_bottom = 1440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CHeader" type="HBoxContainer" parent="C/M/R"]
margin_right = 670.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="C/M/R/CHeader"]
margin_right = 670.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="C/M/R/CHeader/CenterContainer"]
margin_left = 248.0
margin_top = 20.0
margin_right = 421.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="C/M/R/CHeader/CenterContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 40.0
rect_min_size = Vector2( 38, 40 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="C/M/R/CHeader/CenterContainer/HBoxContainer"]
margin_left = 63.0
margin_top = 3.0
margin_right = 173.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Directions"

[node name="Tabs" type="TabContainer" parent="C/M/R"]
margin_top = 84.0
margin_right = 670.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )

[node name="Hostile" type="Tabs" parent="C/M/R/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 52.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 245 )
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = ExtResource( 1 )
scrolling_enabled = false

[node name="List" type="ItemList" parent="C/M/R/Tabs/Hostile"]
anchor_left = -0.010574
anchor_top = -0.0408163
anchor_right = 1.00755
anchor_bottom = 1.04082
margin_left = 4.76837e-07
grow_horizontal = 2
rect_min_size = Vector2( 0, 250 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Neutral" type="Tabs" parent="C/M/R/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 52.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 245 )
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = ExtResource( 1 )
scrolling_enabled = false

[node name="List" type="ItemList" parent="C/M/R/Tabs/Neutral"]
anchor_left = -0.010574
anchor_top = -0.0408163
anchor_right = 1.02719
anchor_bottom = 1.04082
margin_left = 4.76837e-07
rect_min_size = Vector2( 0, 250 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Friendly" type="Tabs" parent="C/M/R/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 52.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 245 )
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = ExtResource( 1 )
scrolling_enabled = false

[node name="List" type="ItemList" parent="C/M/R/Tabs/Friendly"]
anchor_left = -0.010574
anchor_top = -0.0408163
anchor_right = 1.02719
anchor_bottom = 1.04082
margin_left = 4.76837e-07
rect_min_size = Vector2( 0, 250 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Empty4" type="Label" parent="C/M/R"]
margin_top = 389.0
margin_right = 670.0
margin_bottom = 429.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="RichTextLabel" parent="C/M/R"]
margin_top = 433.0
margin_right = 670.0
margin_bottom = 1064.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true

[node name="Empty8" type="Label" parent="C/M/R"]
margin_top = 1068.0
margin_right = 670.0
margin_bottom = 1108.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="H" type="HBoxContainer" parent="C/M/R"]
margin_top = 1112.0
margin_right = 670.0
margin_bottom = 1232.0
custom_constants/separation = 20

[node name="Develop" type="Button" parent="C/M/R/H"]
margin_right = 210.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Develop Skills"

[node name="Network" type="Button" parent="C/M/R/H"]
margin_left = 230.0
margin_right = 440.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Establish Network"

[node name="Station" type="Button" parent="C/M/R/H"]
margin_left = 460.0
margin_right = 670.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Establish Station"

[node name="Empty7" type="Label" parent="C/M/R"]
margin_top = 1236.0
margin_right = 670.0
margin_bottom = 1276.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CReturn" type="HBoxContainer" parent="C/M/R"]
margin_top = 1280.0
margin_right = 670.0
margin_bottom = 1400.0

[node name="Label" type="Label" parent="C/M/R/CReturn"]
margin_top = 53.0
margin_right = 456.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="Return" type="Button" parent="C/M/R/CReturn"]
margin_left = 460.0
margin_right = 670.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Return"
[connection signal="tab_changed" from="C/M/R/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="item_selected" from="C/M/R/Tabs/Hostile/List" to="." method="_on_List_item_selected"]
[connection signal="item_selected" from="C/M/R/Tabs/Neutral/List" to="." method="_on_List_item_selected"]
[connection signal="item_selected" from="C/M/R/Tabs/Friendly/List" to="." method="_on_List_item_selected"]
[connection signal="pressed" from="C/M/R/H/Develop" to="." method="_on_Develop_pressed"]
[connection signal="pressed" from="C/M/R/H/Network" to="." method="_on_Network_pressed"]
[connection signal="pressed" from="C/M/R/H/Station" to="." method="_on_Station_pressed"]
[connection signal="pressed" from="C/M/R/CReturn/Return" to="." method="_on_Return_pressed"]
